--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,10 @@
 } */
 
 .App-header {
-  background-color: #222;
+  background-color: #222222be;
   padding: 30px 0;
   color: white;
+  box-shadow: 0 2px 20px 5px rgba(51, 51, 51, 0.5);
 }
 
 .App-title {
@@ -37,4 +38,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.c-movieList {
+  padding: 30px 0;
 }
