--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,10 @@
 
 .App-header {
   background-color: #111;
-  padding: 30px 0;
+  padding: 0.8rem 0;
   color: white;
-  box-shadow: 0 2px 20px 5px rgba(51, 51, 51, 0.5);
+  box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 }
 
 .App-title {
